# spnl

./: .containerignore  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.ollama  README-HOMEBREW.md  README.md  SECURITY.md  query-planning.md
.cargo-husky/hooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/scripts/: free-up-disk-space-fast.sh  free-up-disk-space.sh  sign-and-notarize-macos.sh  verify-feature-consistency.sh
.github/workflows/: README-release-cli.md  RELEASE-GUIDE.md  basics.yml  cli-image-build-callable.yml  cli-image-build.yml  codeql.yml  core.yml  llm-d-image-build.yml  playground.yml  publish_crate.yml  publish_playground.yml  publish_pypi.yml  python.yml  release-cli.yml  test-llm-d-patch.yml  upload-release-cli.yml  vllm-gce.yml  web.yml
Formula/: spnl.rb
benchmarks/abba/: README.md
benchmarks/haystack/: Cargo.toml  rag_combine.sh  rag_size_histo.sh
benchmarks/haystack/src/: main.rs
benchmarks/inner-outer/: inner-outer-bench.sh  inner-outer.numbers  p99-comparo.sh  p99.sh  results.tar.bz2
benchmarks/mt-rag/: README.md  rag_combine2.sh  rag_dedup.sh
cli/: Cargo.toml
cli/src/: args.rs  builtins.rs  demos.rs  main.rs
cli/src/builtins/: bulk_map.rs  chat.rs  email.json  email.lisp  email.rs  email.yaml  email2.json  email2.lisp  email2.rs  email2.yaml  email3.json  email3.lisp  email3.rs  email3.yaml  fiqa-first100lines.jsonl  gsm8k.rs  rag.rs  spans.rs
cli/src/builtins/sweagent/: mod.rs
cli/src/demos/: chat.rs  demos.rs  email.json  email.rs  email.yaml  email2.rs  email2.yaml  email3.json  email3.yaml  gsm8k.rs  rag.rs  spans.rs
cli/src/demos/sweagent/: mod.rs
docker/: Containerfile.hostbuild  Containerfile.hostbuild.ollama
docker/gce/vllm/: cloud-config.yaml  create-vllm-gce-image.sh  down.sh  main.tf  setup-dev.sh  setup-for-release-image.sh  setup.sh  up.sh  variables.tf
docker/llm-d/: Containerfile.cuda  buildconfig.yaml
docker/vllm/: .gitignore  clone.sh  genpatch.sh
docs/: about.md  build.md  cli.md  dev.md  feature-flags.md  lisp.md  vllm.md
docs/locality/: README.md
examples/abba/: README.md
examples/tests/: tok_query.json
haystack/: Cargo.toml  out  rag_size_histo.sh
haystack/experiment_data/: haystack.numbers  out-v3.n8.k2  out-v3.n8.k4  out-v3.n8.k8  rag.numbers
haystack/src/: main.rs
playground/: package-lock.json
playground/src/: Drawer.tsx  Topology.tsx  demos.ts  run.ts
py/: Cargo.toml
py/src/: lib.rs
spl/: Cargo.toml
spl/src/: main.rs
spl_ast/: Cargo.toml
spl_ast/src/: lib.rs
spl_cli/: Cargo.toml
spl_cli/src/: args.rs  main.rs
spl_run/: Cargo.toml
spl_run/src/: extract.rs  generate.rs  lib.rs  ollama.rs  openai.rs  plan.rs  pull.rs  result.rs  run.rs
spnl/: Cargo.toml  README.md  pyproject.toml  semantics.md
spnl/benches/: BENCHMARK_PROGRESS.md  HAYSTACK.md  README.md  bench_progress.rs  haystack.rs  inner_outer.rs  mt_rag.rs
spnl/examples/: user.py
spnl/src/: augment.rs  chat_template.rs  execute.rs  generate.rs  lib.rs  lisp.rs  plan.rs  pull.rs  python.rs  python_bindings.rs  query.rs  run.rs  tokenize.rs  tokenizer.rs
spnl/src/augment/: embed.rs  index.rs  mod.rs  options.rs  retrieve.rs  storage.rs
spnl/src/augment/index/: layer1.rs  mod.rs  raptor.rs  simple_embed_retrieve.rs  windowing.rs
spnl/src/execute/: mod.rs  pull.rs
spnl/src/ffi/: mod.rs  python.rs
spnl/src/gce/: mod.rs
spnl/src/gce/vllm/: TEST_SUMMARY.md  args.rs  down.rs  image.rs  mod.rs  up.rs
spnl/src/generate/: mod.rs  options.rs
spnl/src/generate/backend/: capabilities.rs  mod.rs  openai.rs  prettynames.rs  progress.rs  spnl.rs  timing.rs
spnl/src/generate/backend/candle/: CHUNKED_PREFILL.md  GGUF_TOKENIZER_IMPLEMENTATION.md  OPTIMIZATIONS.md  OPTIMIZATION_STATUS.md  README.md  candle-model-caching-implementation.md  config.rs  download.rs  gemma2.rs  gemma3.rs  gguf_tokenizer.rs  llama.rs  loader.rs  mod.rs  model.rs  model_pool.rs  quantized_qwen2.rs  quantized_qwen3.rs  quantized_qwen3_moe.rs  qwen2.rs  qwen3.rs  qwen3_moe.rs
spnl/src/generate/backend/mistralrs/: MISTRAL_RS_BACKEND_SIZING.md  OPTIMIZATION_OPPORTUNITIES.md  README.md  device.rs  loader.rs  mod.rs
spnl/src/generate/backend/shared/: config.rs  download.rs  download_progress.rs  mod.rs  template_tokenizer.rs
spnl/src/ir/: augment.rs  bulk.rs  generate.rs  lisp.rs  message.rs  mod.rs  pretty_print.rs  query.rs  query_serde.rs  zip.rs
spnl/src/k8s/: mod.rs
spnl/src/k8s/vllm/: TEST_SUMMARY.md  deployment.yml  mod.rs
spnl/src/optimizer/: hlo.rs  mod.rs
spnl/src/optimizer/hlo/: simplify.rs
spnl/src/optimizer/llo/: chat_template.rs  llir.rs  mod.rs  tokenize.rs
spnl/src/run/: embed.rs  extract.rs  generate.rs  mod.rs  ollama.rs  openai.rs  openai_utils.rs  plan.rs  pull.rs  result.rs  run.rs  tokenizer.rs  with.rs
spnl/src/run/backend/: mod.rs  ollama.rs  openai.rs  spnl.rs
spnl/src/run/with/: embed.rs  index.rs  storage.rs
spnl/src/vllm/: mod.rs  patch.rs
spnl/src/vllm/gce/: down.rs  image.rs  mod.rs  ssh_tunnel.rs  up.rs
spnl/src/vllm/k8s/: deployment.yml  mod.rs
spnl_ast/: Cargo.toml
spnl_ast/src/: lib.rs
spnl_cli/: Cargo.toml
spnl_cli/src/: args.rs  main.rs
spnl_cli/src/demos/: chat.rs  demos.rs  email.lisp  email.rs  email2.json  email2.lisp  email2.rs  email3.lisp  email3.rs  gsm8k.rs  mod.rs  rag.rs
spnl_cli/src/demos/sweagent/: mod.rs
spnl_run/: Cargo.toml
spnl_run/src/: extract.rs  generate.rs  lib.rs  ollama.rs  openai.rs  plan.rs  pull.rs  result.rs  run.rs
spnl_wasm/src/: lib.rs
spnl_web/: index.html  package-lock.json  package.json  vite.config.ts
spnl_web/src/: App.tsx  Body.tsx  Console.tsx  DemoSelect.tsx  Drawer.tsx  Header.tsx  Masthead.tsx  ModelDownloader.tsx  ModelSelect.tsx  Query.ts  QueryEditor.tsx  Topology.css  Topology.tsx  Unit.ts  demos.ts  generate.ts  routeTree.gen.ts  run.ts  validateSearch.ts
wasm/: Cargo.toml
web/: package-lock.json  package.json
web/playground/: package-lock.json  package.json  vite.config.ts
web/src/: Body.tsx  demos.ts
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
(+35 files in other folders)
