[package]
name = "spnl-cli"
version = "0.8.0"
edition = "2024"

[[bin]]
name = "spnl"
path = "src/main.rs"

[features]
rag = ["spnl/rag"]
spnl-api = ["spnl/spnl-api"]
rag-deep-debug = ["spnl/rag-deep-debug"]
openssl-vendored = ["spnl/openssl-vendored"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.37", features = ["derive", "env"] }
ptree = { version = "0.5.2", default-features = false, features = ["ansi"] }
rustyline = { version = "17.0.0", features = ["with-file-history"] }
serde = "1.0.219"
serde_json = "1.0.140"
spnl = { version = ">=0.1.0", path = "../spnl" }
tinytemplate = "1.2.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
