[package]
name = "spnl_py"
version = "0.1.0"
edition = "2024"

[features]
tok = ["spnl_core/tok"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
spnl_core = { package = "spnl", version = "0.1.0", path = "../spnl", default-features=false, features=["python_bindings"] }
pyo3 = { version = "0.25.0", features = ["macros","extension-module"] }
