[package]
name = "spnl"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/IBM/spnl"
description = "A Span Query is a declarative way to specify which portions of a generative AI (GenAI) program should be run directly on model serving components."

[features]
default = ["cli_support","lisp","run","ollama","openai","gemini","pull","yaml"]
cli_support = ["print","dep:ptree","dep:rustyline"]
print = []
lisp = ["dep:serde-lexpr"]
ollama = ["openai"]
openai = ["dep:async-openai","dep:tokio","dep:tokio-stream"]
gemini = ["openai"]
openssl-vendored = ["dep:openssl"]
pull = ["dep:duct","dep:fs4","dep:reqwest"]
pypi = ["tok","dep:pyo3","pyo3/extension-module"]
rag = ["run","dep:sha2", "dep:lancedb","dep:tracing","dep:arrow-schema","dep:arrow-array","dep:itertools","dep:pdf-extract","dep:async-recursion","dep:regex"]
rag_deep_debug = []
run = ["dep:futures","dep:indicatif","dep:async-recursion"]
run_py = ["run","pypi","pyo3/experimental-async","run","ollama","openai","gemini","dep:tokio","tokio/rt-multi-thread"]
tok = ["dep:pyo3","dep:itertools","dep:moka","dep:tokenizers"]
spnl-api = ["dep:reqwest"]
yaml = ["dep:serde_yaml2"]

[dependencies]
ptree = { version = "0.5.2", default-features = false, features = ["ansi"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-lexpr = { version = "0.1.3", optional = true }
async-openai = { version = "0.29.0", optional = true }
async-recursion = {version = "1.1.1", optional = true }
duct = { version = "1.0", optional = true }
fs4 = { version = "0.13.1", optional = true }
futures = { version = "0.3.31", optional = true }
indicatif = { version = "0.18.0", optional = true }
rustyline = { version = "17.0.0", features = ["with-file-history"], optional = true } 
tokio = { version = "1.44.1", features = ["io-std", "io-util"], optional = true }
tokio-util = "0.7.16"
tokio-stream = { version = "0.1.17", optional = true }
anyhow = { version = "1.0.98" }
lancedb = { version = "0.22.0", optional = true }
tracing = { version = "0.1.41", optional = true }
arrow-schema = { version = "55.2", optional = true }
arrow-array = { version = "55.2", optional = true }
itertools = { version = "0.14.0", optional = true }
pdf-extract = { version = "0.10.0", optional = true }
serde_json = { version = "1.0.140" }
serde_yaml2 = { version = "0.1.3", optional = true }
sha2 = { version = "0.10.9", optional = true }
pyo3 = { version = "0.26.0", features = ["macros"], optional = true }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig", "esaxx_fast", "hf-hub", "http"], optional = true }
derive_builder = "0.20.2"
moka = { version = "0.12.10", features = ["sync"], optional = true }
reqwest = { version = "0.12.20", features = ["json", "stream"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
thiserror = "2.0.14"
atoi = "2.0.0"
clap = { version = "4.5.45", features = ["env"] }
regex = { version = "1.11.1", optional = true }
