[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "spnl"
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/IBM/spnl"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
profile = "release"
compatibility = "manylinux2014"
auditwheel = "repair"
strip = true
