[package]
name = "spnl_run"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.1"
async-recursion = "1.1.1"
dialoguer = "0.11.0"
duct = "0.13.7"
fs4 = "0.13.1"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["rayon"] }
ollama-rs = { version = "0.3.1", features = ["stream"] }
rayon = "1.10.0"
spnl_ast = { version = "0.1.0", path = "../spnl_ast" }
tokio = { version = "1.44.1", features = ["io-std"] }
tokio-stream = "0.1.17"
