[package]
name = "haystack"
version = "0.12.10"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.18.0"
lipsum = "0.9.1"
petname = "2.0.2"
ptree = { version = "0.5.2", default-features = false, features = ["ansi"] }
rand = {version = "0.8.5", default-features = false, features = ["alloc"]}
serde = "1.0.219"
serde_json = "1.0.140"
spnl = { version = ">=0.1.0", path = "../../spnl" }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
