[package]
name = "spnl-wasm"
version = "0.13.7"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.140"
spnl = { version = ">=0.1.0", path = "../../spnl", default-features = false, features = ["run","yaml","print"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
tokio = "1.48.0"
